YH-856: fix double wrap on active Chip

--- a/src/shared/ui/Chip/ui/Chip.module.css
+++ b/src/shared/ui/Chip/ui/Chip.module.css
@@ -34,7 +34,7 @@
   }
 
   &.chip-active {
-    box-shadow: 0 0 0 1px var(--color-purple-700);
+    border: 1px solid var(--color-purple-700);
   }
 
   &.chip-primary {
@@ -69,6 +69,6 @@
   .chip-wrapper:hover:where(.chip-clickable),
   .chip-wrapper:focus-visible:where(.chip-clickable),
   .chip-wrapper:active:where(.chip-clickable) {
-    box-shadow: 0 0 0 1px var(--color-purple-700);
+    border: 1px solid var(--color-purple-700);
   }   
 }
